<resources>
    <string name="app_name">ESPS</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="search_hint">Search</string>

    <!-- KEYS  -->

    <string name="key_feed_details">FEED_DETAILS</string>
    <string name="key_recipe_parcel">KEY_RECIPE_PARCEL</string>
    <string name="pa">Physical Activity</string>
    <string name="fragment_title_recipes">Recipes</string>
    <string name="fragment_title_menu_planning">Menu\nPlanning</string>
    <string name="fragment_title_activities">Activities</string>
    <string name="fragment_title_policies">Policies</string>
    <string name="fragment_title_useful_websites">Useful\nWebsites</string>
    <string name="fragment_title_general_info">General\nInfo</string>
    <string name="policy_nutrition_desc">This sample policy meets the requirements of the National Quality Standards and is aligned to the outcomes of My Time, Our Place. The following information is provided to assist OSHC services to develop their own nutrition, food handling and hygiene policy.</string>
    <string name="policy_activity_desc">This sample policy meets the requirements of the National Quality Standards and is aligned to the outcomes of My Time, Our Place - Framework for School Age Care in Australia. The following information is provided to assist OSHC services to develop their own physical activity policy. Tailor the information in this sample policy to your OSHC service.</string>
    <string name="activity_parcel_key">ACTIVITY_PARCEL_KEY</string>
    <string name="general_info_text"><![CDATA[<h3>It is important for children to develop healthy eating and physical activity habits early in life to:</h3><br><ul><li>Ensure healthy growth and development</li><li>Achieve and maintain healthy weight</li><li>Develop strong bones and muscles</li><li>Develop gross motor skills</li><li>Improve fitness, strength and flexibility</li><li>Support good mental health and reduce stress</li></ul><br>Out of School Hours Care (OHSC) services are valuable in promoting healthy eating and physical activity by providing healthy food and drinks and opportunities for active play.<br><br>Being a good role model helps to promote healthy behaviours. Children will notice not just what you say but what you do.<br><br>Eat and drink with the children, be involved with physical activities, and look for opportunities to talk with children about health when you prepare and serve food.]]></string>
</resources>



